# rust-bindgen

./: .travis.yml  Cargo.toml
bindgen_plugin/src/: bgmacro.rs
src/: lib.rs  parser.rs
tests/: support.rs  tests.rs
