[package]

name = "bindgen"
version = "0.16.0"
description = "A binding generator for Rust"
authors = ["Jyun-Yan You <jyyou.tw@gmail.com>"]
license = "BSD-3-Clause"

build = "build.rs"

[dependencies]
env_logger = "0.3.2"
libc = "0.2.*"
log = "0.3.*"
syntex_syntax = "0.29.*"

[features]
static = []

[lib]

name = "bindgen"
path = "src/lib.rs"

[[bin]]

name = "bindgen"
doc = false

[[test]]
name = "tests"
